--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/application
 spring.datasource.username=root
 spring.datasource.password=rootpass
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
